--- a/.github/workflows/main_nutritional-insights-backend.yml
+++ b/.github/workflows/main_nutritional-insights-backend.yml
@@ -13,41 +13,42 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '24.x'
+          node-version: "20.x"
 
-      - name: npm install, build, and test
+      - name: Install and build (backend folder)
+        working-directory: nutritional-insights-backend
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
-      - name: Upload artifact for deployment job
+      - name: Upload artifact for deployment job (backend only)
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: nutritional-insights-backend
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
+          path: node-app
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -55,11 +56,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_83B841C0EFA041789A21EB8E5B0D5913 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_CBB3F1DC94384511918F557B00625EF1 }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'nutritional-insights-backend'
-          slot-name: 'Production'
-          package: .
-          
+          app-name: "nutritional-insights-backend"
+          slot-name: "Production"
+          package: node-app
